objects/ServiceOrder__c.object
<CustomObject>
    <fields>
        <fullName>BunnoKubun__c</fullName>
        <label>分納区分</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CallCenterReceptionNo__c</fullName>
        <formula>Customer__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>コールセンター受付番号</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Center__c</fullName>
        <formula>SalesAccount__r.Area__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>地域</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerOrder__c</fullName>
        <label>顧客オーダ</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>顧客対応票</label>
        <referenceTo>Support__c</referenceTo>
        <relationshipLabel>サービスオーダ</relationshipLabel>
        <relationshipName>ServiceOrder</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DesiredDeliveryDateFormula__c</fullName>
        <formula>Datevalue(DesiredDeliveryDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>希望納期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DesiredDeliveryDate__c</fullName>
        <description>受注オーダ照会：計画納期</description>
        <label>希望納期（旧）</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Field1__c</fullName>
        <formula>ShipmentAccount__r.UndergraduateFormula__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>学部・事業所</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kosohin__c</fullName>
        <label>後送品</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mitsumori__c</fullName>
        <label>見積</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <label>機種</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nohin__c</fullName>
        <label>納品</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderDateFormula__c</fullName>
        <formula>Datevalue(OrderDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>オーダ日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OrderDate__c</fullName>
        <label>オーダ日（旧）</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OrderStatus__c</fullName>
        <label>オーダ状況</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductItem__c</fullName>
        <formula>Customer__r.UnitBodyLink__r.ItemLink__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>品目</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductNo__c</fullName>
        <label>製番</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>備考</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RepairDeliveryDateFormula__c</fullName>
        <formula>Datevalue(RepairDeliveryDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>送付予定日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RepairDeliveryDate__c</fullName>
        <label>送付予定日（旧）</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RetrieveDateFormula__c</fullName>
        <formula>Datevalue(RetrieveDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>回収日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RetrieveDate__c</fullName>
        <label>回収日（旧）</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ReturnDateFormula__c</fullName>
        <formula>Datevalue(ReturnDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>返却日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ReturnDate__c</fullName>
        <label>返却日（旧）</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ReturnDueDateFormula__c</fullName>
        <formula>Datevalue(ReturnDueDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>返却予定日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ReturnDueDate__c</fullName>
        <label>返却予定日（旧）</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SalesAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>販売先取引先</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>サービスオ販売先取引先ーダ ()</relationshipLabel>
        <relationshipName>ServiceOrders_Sales</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalesContactAffiliation__c</fullName>
        <label>販売先担当者所属</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesContactName__c</fullName>
        <label>販売先担当者名</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesContactTel__c</fullName>
        <label>販売先担当者TEL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesDivision__c</fullName>
        <label>売上区分</label>
        <picklist>
            <picklistValues>
                <fullName>未売上</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SalesLocation__c</fullName>
        <formula>SalesAccount__r.Address__c</formula>
        <label>販売先取引先所在地</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesStaffCode__c</fullName>
        <label>営業担当コード</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesStaff__c</fullName>
        <label>営業担当名</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SekyuHoshiki__c</fullName>
        <label>請求方式</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sekyu__c</fullName>
        <label>請求</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SellingPrice__c</fullName>
        <label>販売価格</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ServiceOrderNo_Sync__c</fullName>
        <externalId>true</externalId>
        <label>サービスオーダNo_連携用</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ShipToAffiliation__c</fullName>
        <label>出荷先担当者所属</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipToContactPerson__c</fullName>
        <label>出荷先担当者</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipToContactTEL__c</fullName>
        <label>出荷先担当者TEL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipToLocation__c</fullName>
        <formula>ShipmentAccount__r.Address__c</formula>
        <label>出荷先取引先所在地</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipToPostalCode__c</fullName>
        <formula>ShipmentAccount__r.PostalCode__c</formula>
        <label>出荷先取引先郵便番号</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipmentAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>出荷先取引先</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>サービスオーダ</relationshipLabel>
        <relationshipName>ServiceOrders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ShipmentSn__c</fullName>
        <label>発送品S/N</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShiteYoshiKubun__c</fullName>
        <label>指定用紙区分</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sponsor__c</fullName>
        <label>依頼者</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnitBodyLink__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>本体号機</label>
        <referenceTo>UnitBody__c</referenceTo>
        <relationshipLabel>サービスオーダ</relationshipLabel>
        <relationshipName>ServiceOrder</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UnitBody__c</fullName>
        <label>本体号機</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>サービスオーダ</label>
    <listViews>
        <fullName>View</fullName>
        <columns>CallCenterReceptionNo__c</columns>
        <columns>NAME</columns>
        <columns>OrderDateFormula__c</columns>
        <columns>OrderStatus__c</columns>
        <columns>Model__c</columns>
        <columns>UnitBody__c</columns>
        <columns>SalesAccount__c</columns>
        <columns>SalesStaff__c</columns>
        <columns>RetrieveDateFormula__c</columns>
        <columns>RetrieveDate__c</columns>
        <columns>ReturnDateFormula__c</columns>
        <columns>ReturnDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>A</value>
        </filters>
        <label>全て</label>
        <language>ja</language>
    </listViews>
    <nameField>
        <label>サービスオーダ</label>
        <type>Text</type>
    </nameField>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>BumonRoleSharing__c</fullName>
        <label>部門のロールへの共有</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>KeiretsuRoleSharing__c</fullName>
        <label>系列のロールへの共有</label>
    </sharingReasons>
</CustomObject>